--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elzero</title>
+    <title>Mohamed</title>
     <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +23,7 @@
     <!-- Start Header  -->
     <header>
       <div class="container">
-        <a href="#" class="logo">Elzero</a>
+        <a href="#" class="logo">Mohamed</a>
         <ul class="main-nav">
           <li><a href="#articles">Articles</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -98,7 +98,7 @@
     <div class="landing">
       <div class="container">
         <div class="text">
-          <h1>Welcome, To Elzero World</h1>
+          <h1>Welcome, To Moza World</h1>
           <p>
             Here Iam gonna share everything about my life. Books Iam reading,
             Games Iam Playing, Stories and Events
@@ -846,7 +846,7 @@
     <footer>
       <div class="container">
         <div class="box">
-          <h3>Elzero</h3>
+          <h3>Mohamed</h3>
           <ul class="social">
             <li>
               <a href="#" class="facebook">
@@ -903,7 +903,7 @@
           <img decoding="async" src="./Image/gallery-06.png" alt="" />
         </div>
       </div>
-      <p class="copyright">Made With &lt;3 By Elzero</p>
+      <p class="copyright">Made With &lt;3 By Mohamed</p>
     </footer>
     <!-- End Footer  -->
   </body>
